Made progress in the game core implementation and the client server communication as well

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<div id="console">
 		</div>
 		<button id="lidhu">Connect</button>
-		<input type="text" name="ljt_emri">
+		<input type="text" name="ljt_emri"> ---
+		<input type="text" name="dora">
+		<button id="hidh">Hidh</button>
+		<button id="pass">Pas</button>
 	</body>
 </html>
