minor modification to index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 		<input type="text" name="ljt_emri"> ---
 		<input type="text" name="dora">
 		<button id="hidh">Hidh</button>
-		<button id="pass">Pas</button>
+		<button id="pas">Pas</button>
 	</body>
 </html>
